--- a/BasedMoon/foundry.toml
+++ b/BasedMoon/foundry.toml
@@ -2,5 +2,17 @@
 src = "src"
 out = "out"
 libs = ["lib"]
+auto_detect_remappings = false
+chain_id = 8453
+auto_detect_solc = false
+solc_version = "0.8.20"
+evm_version = "paris"
+via_ir = false
+cbor_metadata = false
+use_literal_content = false
+bytecode_hash = "none"
+optimizer = true
+optimizer_runs = 20
+libraries = []
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
